--- a/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/src/app/lista-contratistas/lista-contratistas.component.html
+++ b/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/src/app/lista-contratistas/lista-contratistas.component.html
@@ -13,7 +13,7 @@
             <section class="card-text">
                 <div class="table-responsive table-responsive-sm tabla">
 
-                    <table class="table table-bordered tabla-fondo">
+                    <table class="table table-bordered tabla-fondo" aria-label="lista_contratos">
                         <thead class="thead-color text-center">
                             <tr>
                                 <th scope="col">ID</th>
