--- a/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/src/app/modificar-contrato/modificar-contrato.component.html
+++ b/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/src/app/modificar-contrato/modificar-contrato.component.html
@@ -7,11 +7,11 @@
             <section>
                 <div class="form-group">
                     <label for="identificacion">Id Contrato</label>
-                    <input type="text" class="form-control" formControlName="tipo_id" disabled>
+                    <input type="text" class="form-control" formControlName="tipo_id" disabled="true">
                 </div>
                 <div class="form-group">
                     <label for="identificacion">Identificación</label>
-                    <input type="text" class="form-control" formControlName="id" disabled>
+                    <input type="text" class="form-control" formControlName="id" disabled="true">
                 </div>
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
